Fixed value of Visibility for loadOverlay.

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,5 +1,5 @@
 #loadOverlay{
-	visibility: none;
+	visibility: hidden;
 	opacity: 0;
 	transition: visibility 0s, opacity 0.5s;
 }
